--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,13 @@ body {
 }
 
 nav {
-  height: 10vh;
+  /* height: 10vh; */
   /* border: 4px solid red; */
 }
 
 section {
   height: 70vh;
 
-  /* border: 4px solid red; */
-  /* overflow: hidden; */
   opacity: 0;
   padding: 5rem;
   animation: popin 1.5s forwards ease;
