--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -2,7 +2,7 @@
   display: flex;
   padding: 3rem;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .project {
