--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ section {
   opacity: 0;
   padding: 5rem;
   animation: popin 1.5s forwards ease;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 @keyframes popin {
