add email service

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
-  --color_1: #231f20;
+  /* --color_1: #231f20; */
+  --color_1: #fff;
   --color_2: #4d8b31;
   --color_3: #ffc800;
   --color_31: #ffc80020;
