--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -4,3 +4,18 @@
   justify-content: center;
   /* align-items: center; */
 }
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-form input {
+  margin: 1rem;
+  padding: 1rem;
+}
+
+#contact-form button {
+  margin: 1rem;
+  padding: 1rem;
+}
