--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -19,3 +19,14 @@
   margin: 1rem;
   padding: 1rem;
 }
+
+@media only screen and (max-width: 500px) {
+  #contact-form button {
+    margin: 1rem;
+    padding: 1rem;
+    border: none;
+    background-color: var(--color_4);
+    color: var(--color_1);
+    border-radius: 1rem;
+  }
+}
