change nav color

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
   --color_1: #ffffff;
   /* --color_1: #fff; */
   --color_2: #4d8b31;
-  --color_3: #ffc800;
+  /* --color_3: #ffc800; */
+  --color_3: #3ba4cd;
   --color_31: #ffc80020;
-  --color_4: #ff8427;
+  /* --color_4: #ff8427; */
+  --color_4: #3ba4cd;
   --color_5: #000000;
 
   --card-bg: #17141d;
